manifests/vaultwarden/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: 8080
